// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`legacyConfig 1`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
]
`;

exports[`legacyConfig 2`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`legacyConfig 3`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
]
`;

exports[`legacyConfig 4`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`legacyConfig 5`] = `
[
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;

exports[`legacyConfig 6`] = `
[
  [
    "webp",
    10,
    15,
  ],
  [
    "webp",
    1080,
    1620,
  ],
  [
    "webp",
    1200,
    1800,
  ],
  [
    "webp",
    128,
    192,
  ],
  [
    "webp",
    16,
    24,
  ],
  [
    "webp",
    1920,
    2880,
  ],
  [
    "webp",
    2048,
    3072,
  ],
  [
    "webp",
    256,
    384,
  ],
  [
    "webp",
    32,
    48,
  ],
  [
    "webp",
    384,
    576,
  ],
  [
    "webp",
    3840,
    5760,
  ],
  [
    "webp",
    48,
    72,
  ],
  [
    "webp",
    64,
    96,
  ],
  [
    "webp",
    640,
    960,
  ],
  [
    "webp",
    750,
    1125,
  ],
  [
    "webp",
    828,
    1242,
  ],
  [
    "webp",
    96,
    144,
  ],
]
`;

exports[`newConfig 1`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
]
`;

exports[`newConfig 2`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`newConfig 3`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.WEBP",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.WEBP",
]
`;

exports[`newConfig 4`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.WEBP",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.WEBP",
]
`;

exports[`newConfig 5`] = `
[
  [
    "webp",
    10,
    7,
  ],
  [
    "webp",
    1080,
    720,
  ],
  [
    "webp",
    1200,
    800,
  ],
  [
    "webp",
    128,
    85,
  ],
  [
    "webp",
    16,
    11,
  ],
  [
    "webp",
    1920,
    1280,
  ],
  [
    "webp",
    2048,
    1365,
  ],
  [
    "webp",
    256,
    171,
  ],
  [
    "webp",
    32,
    21,
  ],
  [
    "webp",
    384,
    256,
  ],
  [
    "webp",
    3840,
    2560,
  ],
  [
    "webp",
    48,
    32,
  ],
  [
    "webp",
    64,
    43,
  ],
  [
    "webp",
    640,
    427,
  ],
  [
    "webp",
    750,
    500,
  ],
  [
    "webp",
    828,
    552,
  ],
  [
    "webp",
    96,
    64,
  ],
]
`;

exports[`newConfig 6`] = `
[
  [
    "webp",
    10,
    15,
  ],
  [
    "webp",
    1080,
    1620,
  ],
  [
    "webp",
    1200,
    1800,
  ],
  [
    "webp",
    128,
    192,
  ],
  [
    "webp",
    16,
    24,
  ],
  [
    "webp",
    1920,
    2880,
  ],
  [
    "webp",
    2048,
    3072,
  ],
  [
    "webp",
    256,
    384,
  ],
  [
    "webp",
    32,
    48,
  ],
  [
    "webp",
    384,
    576,
  ],
  [
    "webp",
    3840,
    5760,
  ],
  [
    "webp",
    48,
    72,
  ],
  [
    "webp",
    64,
    96,
  ],
  [
    "webp",
    640,
    960,
  ],
  [
    "webp",
    750,
    1125,
  ],
  [
    "webp",
    828,
    1242,
  ],
  [
    "webp",
    96,
    144,
  ],
]
`;

exports[`newConfigJpeg 1`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.JPG",
]
`;

exports[`newConfigJpeg 2`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.JPG",
]
`;

exports[`newConfigJpeg 3`] = `
[
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-10.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1080.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1200.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-128.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-16.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-1920.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-2048.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-256.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-32.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-384.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-3840.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-48.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-64.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-640.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-750.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-828.JPG",
  "chris-zhang-Jq8-3Bmh1pQ-unsplash-opt-96.JPG",
]
`;

exports[`newConfigJpeg 4`] = `
[
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-10.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1080.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1200.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-128.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-16.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-1920.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-2048.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-256.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-32.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-384.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-3840.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-48.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-64.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-640.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-750.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-828.JPG",
  "ollie-barker-jones-K52HVSPVvKI-unsplash-opt-96.JPG",
]
`;

exports[`newConfigJpeg 5`] = `
[
  [
    "jpeg",
    10,
    7,
  ],
  [
    "jpeg",
    1080,
    720,
  ],
  [
    "jpeg",
    1200,
    800,
  ],
  [
    "jpeg",
    128,
    85,
  ],
  [
    "jpeg",
    16,
    11,
  ],
  [
    "jpeg",
    1920,
    1280,
  ],
  [
    "jpeg",
    2048,
    1365,
  ],
  [
    "jpeg",
    256,
    171,
  ],
  [
    "jpeg",
    32,
    21,
  ],
  [
    "jpeg",
    384,
    256,
  ],
  [
    "jpeg",
    3840,
    2560,
  ],
  [
    "jpeg",
    48,
    32,
  ],
  [
    "jpeg",
    64,
    43,
  ],
  [
    "jpeg",
    640,
    427,
  ],
  [
    "jpeg",
    750,
    500,
  ],
  [
    "jpeg",
    828,
    552,
  ],
  [
    "jpeg",
    96,
    64,
  ],
]
`;

exports[`newConfigJpeg 6`] = `
[
  [
    "jpeg",
    10,
    15,
  ],
  [
    "jpeg",
    1080,
    1620,
  ],
  [
    "jpeg",
    1200,
    1800,
  ],
  [
    "jpeg",
    128,
    192,
  ],
  [
    "jpeg",
    16,
    24,
  ],
  [
    "jpeg",
    1920,
    2880,
  ],
  [
    "jpeg",
    2048,
    3072,
  ],
  [
    "jpeg",
    256,
    384,
  ],
  [
    "jpeg",
    32,
    48,
  ],
  [
    "jpeg",
    384,
    576,
  ],
  [
    "jpeg",
    3840,
    5760,
  ],
  [
    "jpeg",
    48,
    72,
  ],
  [
    "jpeg",
    64,
    96,
  ],
  [
    "jpeg",
    640,
    960,
  ],
  [
    "jpeg",
    750,
    1125,
  ],
  [
    "jpeg",
    828,
    1242,
  ],
  [
    "jpeg",
    96,
    144,
  ],
]
`;
